--- a/bitnami/kubeapps/templates/mongodb-jobs-cleanup.yaml
+++ b/bitnami/kubeapps/templates/mongodb-jobs-cleanup.yaml
@@ -1,13 +1,12 @@
-# Clean up the AppRepository resources used by this Kubeapps instance
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ template "kubeapps.apprepository-jobs-cleanup.fullname" . }}
+  name: {{ template "kubeapps.mongodb-jobs-cleanup.fullname" . }}
   annotations:
     helm.sh/hook: post-delete
     helm.sh/hook-delete-policy: hook-succeeded
   labels:
-    app: {{ template "kubeapps.apprepository-jobs-cleanup.fullname" . }}
+    app: {{ template "kubeapps.mongodb-jobs-cleanup.fullname" . }}
     chart: {{ template "kubeapps.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -15,21 +14,19 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "kubeapps.apprepository-jobs-cleanup.fullname" . }}
+        app: {{ template "kubeapps.mongodb-jobs-cleanup.fullname" . }}
         release: {{ .Release.Name }}
     spec:
       containers:
       - name: kubectl
         image: {{ template "kubeapps.image" .Values.hooks.image }}
         command:
-        - kubectl
-        - delete
-        - apprepositories.kubeapps.com
-        - -n
-        - {{ .Release.Namespace }} 
-        - --all
+        - /bin/sh
+        args:
+        - -c
+        - "kubectl delete secret -n {{ .Release.Namespace }} {{ .Values.mongodb.existingSecret }} || true"
       restartPolicy: OnFailure
-      serviceAccountName: {{ template "kubeapps.apprepository-jobs-cleanup.fullname" . }}
+      serviceAccountName: {{ template "kubeapps.mongodb-jobs-cleanup.fullname" . }}
     {{- with .Values.hooks.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
