--- a/bitnami/kubeapps/templates/apprepository-deployment.yaml
+++ b/bitnami/kubeapps/templates/apprepository-deployment.yaml
@@ -30,7 +30,7 @@ spec:
         - --repo-sync-image={{ template "kubeapps.image" .Values.apprepository.syncImage }}
         - --namespace={{ .Release.Namespace }}
         - --mongo-url={{ template "kubeapps.mongodb.fullname" . }}
-        - --mongo-secret-name={{ template "kubeapps.mongodb.fullname" . }}
+        - --mongo-secret-name={{ .Values.mongodb.existingSecret }}
         resources:
 {{ toYaml .Values.apprepository.resources | indent 12 }}
     {{- with .Values.apprepository.nodeSelector }}
