--- a/bitnami/mean/values.yaml
+++ b/bitnami/mean/values.yaml
@@ -143,7 +143,7 @@ ingress:
     ## Set this to true in order to enable TLS on the ingress record
     tls: false
 
-    ## Set this to true in order to add the corresponding annontations for cert-manager
+    ## Set this to true in order to add the corresponding annotations for cert-manager
     certManager: false
 
     ## If TLS is set to true, you must declare what secret will store the key/certificate for TLS
