--- a/bitnami/mean/values.yaml
+++ b/bitnami/mean/values.yaml
@@ -1,3 +1,9 @@
+## Global chart image registry
+## Please, note that this registry would be used for all the containers in the chart and dependencies
+##
+# global:
+#   registry:
+
 ## Bitnami node image version
 ## ref: https://hub.docker.com/r/bitnami/node/tags/
 ##
@@ -83,6 +89,8 @@ resources: {}
 
 ##
 ## MongoDB chart configuration
+##
+## https://github.com/helm/charts/blob/master/stable/mongodb/values.yaml
 ##
 mongodb:
   ## MongoDB admin password
