--- a/bitnami/node/templates/deployment.yaml
+++ b/bitnami/node/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         - name: app
           mountPath: /app
       - name: npm-install
-        image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        image: "{{ template "node.image" . }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         workingDir: /app
         command: ['/bin/bash', '-c', 'useradd bitnami && chown -R bitnami:bitnami /app && npm install']
@@ -45,7 +45,7 @@ spec:
           mountPath: /app
       containers:
       - name: {{ template "node.fullname" . }}
-        image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        image: "{{ template "node.image" . }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         env:
         {{- if .Values.mongodb.install }}
