--- a/bitnami/wildfly/values.yaml
+++ b/bitnami/wildfly/values.yaml
@@ -1,3 +1,9 @@
+## Global chart image registry
+## Please, note that this registry would be used for all the containers in the chart and dependencies
+##
+# global:
+#   registry:
+
 ## Bitnami WildFly image version
 ## ref: https://hub.docker.com/r/bitnami/wildfly/tags/
 ##
