Enable jmx metrics
Signed-off-by: Javier J. Salmeron Garcia <jsalmeron@bitnami.com>

--- a/bitnami/kafka/values-production.yaml
+++ b/bitnami/kafka/values-production.yaml
@@ -255,7 +255,7 @@ metrics:
 
   ## Prometheus JMX Exporter: exposes the majority of Kafkas metrics
   jmx:
-    enabled: false
+    enabled: true
 
     image:
       registry: docker.io
