--- a/bitnami/apache/values.yaml
+++ b/bitnami/apache/values.yaml
@@ -1,8 +1,8 @@
-## Global chart image registry
+## Global Docker image registry
 ## Please, note that this will override the image registry for all the images, including dependencies, configured to use the global value
 ##
 # global:
-#   registry:
+#   imageRegistry:
 
 ## Bitnami Apache image version
 ## ref: https://hub.docker.com/r/bitnami/apache/tags/
@@ -20,4 +20,4 @@ image:
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
   ##
   # pullSecrets:
-  #   - myRegistrKeySecretName 
+  #   - myRegistrKeySecretName
