--- a/bitnami/mysql/values.yaml
+++ b/bitnami/mysql/values.yaml
@@ -1,8 +1,8 @@
-## Global chart image registry
+## Global Docker image registry
 ## Please, note that this will override the image registry for all the images, including dependencies, configured to use the global value
 ##
 # global:
-#   registry:
+#   imageRegistry:
 
 ## Bitnami MySQL image
 ## ref: https://hub.docker.com/r/bitnami/mysql/tags/
