--- a/bitnami/apache/values.yaml
+++ b/bitnami/apache/values.yaml
@@ -10,7 +10,7 @@
 image:
   registry: docker.io
   repository: bitnami/apache
-  tag: 2.4.35-debian-9
+  tag: 2.4.35
   ## Specify a imagePullPolicy
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
   ##
