--- a/bitnami/mysql/values.yaml
+++ b/bitnami/mysql/values.yaml
@@ -10,7 +10,7 @@
 image:
   registry: docker.io
   repository: bitnami/mysql
-  tag: 5.7.23-debian-9
+  tag: 5.7.23
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
