--- a/bitnami/nginx-ingress-controller/values.yaml
+++ b/bitnami/nginx-ingress-controller/values.yaml
@@ -297,9 +297,9 @@ defaultBackend:
 
   name: default-backend
   image:
-    repository: k8s.gcr.io/defaultbackend
-    tag: "1.4"
-    pullPolicy: IfNotPresent
+    repository: bitnami/nginx
+    tag: latest
+    pullPolicy: Always
 
   extraArgs: {}
 
