--- a/bitnami/apache/values.yaml
+++ b/bitnami/apache/values.yaml
@@ -22,6 +22,10 @@ image:
   # pullSecrets:
   #   - myRegistrKeySecretName
 
+## Pod annotations
+## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
+##
+podAnnotations: {}
 ## Prometheus Exporter / Metrics
 ##
 metrics:
