--- a/bitnami/kubeapps/templates/kubeapps-frontend-config.yaml
+++ b/bitnami/kubeapps/templates/kubeapps-frontend-config.yaml
@@ -38,6 +38,12 @@ data:
         # Hide Www-Authenticate to prevent it triggering a basic auth prompt in
         # the browser with some clusters
         proxy_hide_header Www-Authenticate;
+
+        # Keep the connection open with the API server even if idle (the default is 60 seconds)
+        # Setting it to 1 hour which should be enough for our current use case of deploying/upgrading apps
+        # If we enable other use-cases in the future we might need to bump this value
+        # More info here https://github.com/kubeapps/kubeapps/issues/766
+        proxy_read_timeout 1h;
       }
 
       location /api/chartsvc {
