--- a/bitnami/cassandra/templates/service.yaml
+++ b/bitnami/cassandra/templates/service.yaml
@@ -13,7 +13,7 @@ spec:
 {{- end }}
 {{ if eq .Values.service.type "LoadBalancer" -}} {{ if .Values.service.loadBalancerIP -}}
   loadBalancerIP: {{ .Values.service.loadBalancerIP }}
-{{ end -}}
+{{- end -}} {{- end }}
   type: {{ .Values.service.type }}
   ports:
   - name: cql
