--- a/bitnami/node/values.yaml
+++ b/bitnami/node/values.yaml
@@ -45,6 +45,9 @@ replicas: 1
 ##
 applicationPort: 3000
 
+# Define custom environment variables to pass to the image here
+extraEnv: {}
+
 ## Kubernetes Service Configuration
 service:
   ## For minikube, set this to NodePort, elsewhere use LoadBalancer
