Apply all requested changes

--- a/bitnami/cassandra/templates/cassandra-secret.yaml
+++ b/bitnami/cassandra/templates/cassandra-secret.yaml
@@ -4,16 +4,16 @@ kind: Secret
 metadata:
   name: {{ template "cassandra.fullname" . }}
   labels:
-    app: "{{ template "cassandra.name" . }}"
+    app: {{ template "cassandra.name" . }}
     chart: {{ template "cassandra.chart" . }}
-    release: {{ .Release.Name | quote }}
-    heritage: {{ .Release.Service | quote }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 type: Opaque
 data:
   {{- if .Values.dbUser.password }}
-  cassandra-password: "{{ .Values.dbUser.password | b64enc }}"
+  cassandra-password: {{ .Values.dbUser.password | b64enc | quote }}
   {{- else if (not .Values.dbUser.forcePassword) }}
-  cassandra-password: "{{ randAlphaNum 10 | b64enc }}"
+  cassandra-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ else }}
   cassandra-password: {{ required "A Cassandra Password is required!" .Values.dbUser.password }}
   {{- end }}
