--- a/bitnami/cassandra/templates/headless-svc.yaml
+++ b/bitnami/cassandra/templates/headless-svc.yaml
@@ -5,8 +5,8 @@ metadata:
   labels:
     app: {{ template "cassandra.name" . }}
     chart: {{ template "cassandra.chart" .  }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   clusterIP: None
   publishNotReadyAddresses: true
@@ -21,10 +21,10 @@ spec:
     port: 7199
     targetPort: jmx
   - name: cql
-    port: {{ default 9042 .Values.service.cqlPort }}
+    port: {{ .Values.service.cqlPort }}
     targetPort: cql
   - name: thrift
-    port: {{ default 9160 .Values.service.thriftPort }}
+    port: {{ .Values.service.thriftPort }}
     targetPort: thrift
   selector:
     app: {{ template "cassandra.name" . }}
