--- a/bitnami/cassandra/templates/service.yaml
+++ b/bitnami/cassandra/templates/service.yaml
@@ -17,10 +17,10 @@ spec:
   type: {{ .Values.service.type }}
   ports:
   - name: cql
-    port: {{ default 9042 .Values.service.cqlPort }}
+    port: {{ .Values.service.cqlPort }}
     targetPort: cql
   - name: thrift
-    port: {{ default 9160 .Values.service.thriftPort }}
+    port: {{ .Values.service.thriftPort }}
     targetPort: thrift
   selector:
     app: {{ template "cassandra.name" . }}
