--- a/bitnami/cassandra/values-production.yaml
+++ b/bitnami/cassandra/values-production.yaml
@@ -28,6 +28,7 @@ image:
 
 ## Specify a service type
 ## ref: http://kubernetes.io/docs/user-guide/services/
+##
 service:
   type: ClusterIP
   cqlPort: 9042
@@ -69,13 +70,13 @@ persistence:
   ## Persistent Volume size
   ##
   size: 8Gi
-  ##
 
 ## Configure resource requests and limits
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ## Minimum memory for development is 4GB and 2 CPU cores
 ## Minimum memory for production is 8GB and 4 CPU cores
 ## ref: http://docs.datastax.com/en/archived/cassandra/2.0/cassandra/architecture/architecturePlanningHardware_c.html
+##
 resources: {}
   # requests:
   #   memory: 4Gi
@@ -84,24 +85,24 @@ resources: {}
   #   memory: 4Gi
   #   cpu: 2
 
-## Change cassandra configuration parameters below:
-## ref: http://docs.datastax.com/en/cassandra/3.0/cassandra/configuration/configCassandra_yaml.html
-## Recommended max heap size is 1/2 of system memory
-## Recommeneed heap new size is 1/4 of max heap size
-## ref: http://docs.datastax.com/en/cassandra/3.0/cassandra/operations/opsTuneJVM.html
+## Cluster parameters
+##
 cluster:
   name: cassandra
   replicaCount: 3
   seedCount: 2
 
+## Database credentials
+##
 dbUser:
   user: cassandra
-  forcePassword: false
+  forcePassword: true
   # password:
   # existingSecret: 
 
 ## Liveness and Readiness probe values.
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/
+##
 livenessProbe:
   enabled: true
   initialDelaySeconds: 60
@@ -119,12 +120,16 @@ readinessProbe:
 
 ## Additional pod annotations
 ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
+##
 podAnnotations: {}
 
 ## Additional pod labels
 ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
+##
 podLabels: {}
 
+## StatefulSet settings
+##
 statefulset:
   updateStrategy: OnDelete
   # rollingUpdatePartition:
@@ -139,6 +144,7 @@ securityContext:
 
 ## Affinity for pod assignment
 ## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
+##
 affinity: {}
 
 ## Tolerations for pod assignment
@@ -146,6 +152,9 @@ affinity: {}
 ##
 tolerations: []
 
+## Network policies
+## Ref: https://kubernetes.io/docs/concepts/services-networking/network-policies/
+##
 networkPolicy:
   ## Specifies whether a NetworkPolicy should be created
   ##
@@ -159,7 +168,8 @@ networkPolicy:
   # allowExternal: true
 
 ## Cassandra exporter configuration
-## ref: https://github.com/criteo/cassandra_exporter
+## Ref: https://github.com/criteo/cassandra_exporter
+##
 metrics:
   enabled: true
   image:
