--- a/bitnami/kubeapps/templates/apprepository-crd.yaml
+++ b/bitnami/kubeapps/templates/apprepository-crd.yaml
@@ -1,4 +1,4 @@
-{{- if not (.Capabilities.APIVersions.Has "kubeapps.com/v1alpha1") -}}
+{{- if or (not (.Capabilities.APIVersions.Has "kubeapps.com/v1alpha1")) (.Release.IsUpgrade) -}}
 # The condition above will be true if another instance of Kubeapps is
 # already installed 
 apiVersion: apiextensions.k8s.io/v1beta1
