kubeapps: bump chart version to 0.9.8

--- a/bitnami/kubeapps/templates/apprepository-crd.yaml
+++ b/bitnami/kubeapps/templates/apprepository-crd.yaml
@@ -1,4 +1,4 @@
-{{- if or (not (.Capabilities.APIVersions.Has "kubeapps.com/v1alpha1")) (.Release.IsUpgrade) -}}
+{{- if not (.Capabilities.APIVersions.Has "kubeapps.com/v1alpha1") -}}
 # The condition above will be true if another instance of Kubeapps is
 # already installed 
 apiVersion: apiextensions.k8s.io/v1beta1
@@ -6,7 +6,7 @@ kind: CustomResourceDefinition
 metadata:
   name: apprepositories.kubeapps.com
   annotations:
-    "helm.sh/resource-policy": keep
+    "helm.sh/hook": crd-install
   labels:
     app: {{ template "kubeapps.apprepository.fullname" . }}
     chart: {{ template "kubeapps.chart" . }}
