--- a/bitnami/kubeapps/Chart.yaml
+++ b/bitnami/kubeapps/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 name: kubeapps
-version: 0.9.8
-appVersion: v1.0.0-beta.4
+version: 1.0.0
+appVersion: v1.0.0
 description: Kubeapps is a dashboard for your Kubernetes cluster that makes it easy to deploy and manage applications in your cluster using Helm
 icon: https://raw.githubusercontent.com/kubeapps/kubeapps/master/docs/img/logo.png
 keywords:
