--- a/bitnami/kubeapps/templates/apprepository-deployment.yaml
+++ b/bitnami/kubeapps/templates/apprepository-deployment.yaml
@@ -27,6 +27,7 @@ spec:
         - /apprepository-controller
         args:
         - --logtostderr
+        - --user-agent-comment=kubeapps/{{ .Chart.AppVersion }}
         - --repo-sync-image={{ template "kubeapps.image" (list .Values.apprepository.syncImage .Values.global) }}
         - --namespace={{ .Release.Namespace }}
         - --mongo-url={{ template "kubeapps.mongodb.fullname" . }}
