[metrics-server] Adding ability to pull docker image from private registry
Signed-off-by: Patrick Montanari <patrick.montanari@gmail.com>

--- a/bitnami/metrics-server/templates/serviceaccount.yaml
+++ b/bitnami/metrics-server/templates/serviceaccount.yaml
@@ -8,4 +8,6 @@ metadata:
     chart: {{ template "metrics-server.chart" . }}
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
+imagePullSecrets:
+{{ toYaml .Values.image.imagePullSecrets | indent 2 }}
 {{- end -}}
