--- a/bitnami/metrics-server/values.yaml
+++ b/bitnami/metrics-server/values.yaml
@@ -17,6 +17,10 @@ image:
   ##
   pullPolicy: Always
 
+  # For supporting pulling from private registries
+  imagePullSecrets: []
+  # - name: "image-pull-secret"
+
 rbac:
   # Specifies whether RBAC resources should be created
   create: true
