--- a/bitnami/wildfly/templates/svc.yaml
+++ b/bitnami/wildfly/templates/svc.yaml
@@ -8,13 +8,25 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  type: {{ .Values.serviceType }}
+  type: {{ .Values.service.type }}
+  {{- if (or (eq .Values.service.type "LoadBalancer") (eq .Values.service.type "NodePort")) }}
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy | quote }}
+  {{- end }}
+  {{- if (and (eq .Values.service.type "LoadBalancer") (not (empty .Values.service.loadBalancerIP))) }}
+  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
+  {{- end }}
   ports:
   - name: http
-    port: 80
+    port: {{ .Values.service.port}}
     targetPort: http
+    {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePorts.http)))}}
+    nodePort: {{ .Values.service.nodePorts.http }}
+    {{- end }}
   - name: mgmt
-    port: 9990
+    port: {{ .Values.service.mgmtPort}}
     targetPort: mgmt
+    {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePorts.mgmt)))}}
+    nodePort: {{ .Values.service.nodePorts.mgmt }}
+    {{- end }}
   selector:
     app: {{ template "fullname" . }}
