[bitnami/cassandra] Rename cqlPort to port
Signed-off-by: Javier J. Salmeron Garcia <jsalmeron@bitnami.com>

--- a/bitnami/cassandra/values-production.yaml
+++ b/bitnami/cassandra/values-production.yaml
@@ -31,7 +31,8 @@ image:
 ##
 service:
   type: ClusterIP
-  cqlPort: 9042
+  ## CQL Port
+  port: 9042
   thriftPort: 9160
   ## Specify the nodePort value for the LoadBalancer and NodePort service types.
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
