--- a/bitnami/cassandra/values.yaml
+++ b/bitnami/cassandra/values.yaml
@@ -31,7 +31,8 @@ image:
 ##
 service:
   type: ClusterIP
-  cqlPort: 9042
+  ## CQL Port
+  port: 9042
   thriftPort: 9160
   ## Specify the nodePort value for the LoadBalancer and NodePort service types.
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
