--- a/bitnami/kubeapps/templates/kubeapps-frontend-deployment.yaml
+++ b/bitnami/kubeapps/templates/kubeapps-frontend-deployment.yaml
@@ -44,6 +44,11 @@ spec:
       nodeSelector:
 {{ toYaml . | indent 8 }}
     {{- end }}
+      {{- if .Values.securityContext.enabled }}
+      securityContext:
+        fsGroup: {{ .Values.securityContext.fsGroup }}
+        runAsUser: {{ .Values.securityContext.runAsUser }}
+      {{- end }}
     {{- with .Values.frontend.affinity }}
       affinity:
 {{ toYaml . | indent 8 }}
