--- a/bitnami/kubeapps/templates/mongodb-jobs-cleanup.yaml
+++ b/bitnami/kubeapps/templates/mongodb-jobs-cleanup.yaml
@@ -31,6 +31,11 @@ spec:
       nodeSelector:
 {{ toYaml . | indent 8 }}
     {{- end }}
+      {{- if .Values.securityContext.enabled }}
+      securityContext:
+        fsGroup: {{ .Values.securityContext.fsGroup }}
+        runAsUser: {{ .Values.securityContext.runAsUser }}
+      {{- end }}
     {{- with .Values.hooks.affinity }}
       affinity:
 {{ toYaml . | indent 8 }}
