--- a/bitnami/kubeapps/templates/chartsvc-deployment.yaml
+++ b/bitnami/kubeapps/templates/chartsvc-deployment.yaml
@@ -46,6 +46,11 @@ spec:
       nodeSelector:
 {{ toYaml . | indent 8 }}
     {{- end }}
+      {{- if .Values.securityContext.enabled }}
+      securityContext:
+        fsGroup: {{ .Values.securityContext.fsGroup }}
+        runAsUser: {{ .Values.securityContext.runAsUser }}
+      {{- end }}
     {{- with .Values.chartsvc.affinity }}
       affinity:
 {{ toYaml . | indent 8 }}
