--- a/bitnami/kubeapps/templates/dashboard-deployment.yaml
+++ b/bitnami/kubeapps/templates/dashboard-deployment.yaml
@@ -56,6 +56,11 @@ spec:
       nodeSelector:
 {{ toYaml . | indent 8 }}
     {{- end }}
+      {{- if .Values.securityContext.enabled }}
+      securityContext:
+        fsGroup: {{ .Values.securityContext.fsGroup }}
+        runAsUser: {{ .Values.securityContext.runAsUser }}
+      {{- end }}
     {{- with .Values.dashboard.affinity }}
       affinity:
 {{ toYaml . | indent 8 }}
