--- a/bitnami/kubeapps/values.yaml
+++ b/bitnami/kubeapps/values.yaml
@@ -22,6 +22,9 @@ ingress:
   # If certManager is set to true, annotation kubernetes.io/tls-acme: "true" will automatically be set
   annotations:
   #  kubernetes.io/ingress.class: nginx
+    # Keep the connection open with the API server even if idle (the default is 60 seconds)
+    # Setting it to 10 minutes which should be enough for our current use case of deploying/upgrading/deleting apps
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     
   # The list of hostnames to be covered with this ingress record.
   # Most likely this will be just one host, but in the event more hosts are needed, this is an array
@@ -124,8 +127,8 @@ apprepository:
 hooks:
   image:
     registry: docker.io
-    repository: lachlanevenson/k8s-kubectl
-    tag: v1.9.9
+    repository: bitnami/kubectl
+    tag: 1.12.3-r13
   nodeSelector: {}
   tolerations: []
   affinity: {}
@@ -257,6 +260,14 @@ affinity: {}
 rbac:
   # Perform creation of RBAC resources
   create: true
+
+## Pod Security Context
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
+##
+securityContext:
+  enabled: false
+  runAsUser: 1001
+  # fsGroup: 1001
 
 testImage:
   # Image used for the tests. The only requirement is to include curl
