[bitnami//tensorflow-inception] Adapt Chart to non-root container

--- a/bitnami/tensorflow-inception/templates/deployment.yaml
+++ b/bitnami/tensorflow-inception/templates/deployment.yaml
@@ -29,6 +29,11 @@ spec:
   {{- end }}
 {{- end }}
     spec:
+      {{- if .Values.securityContext.enabled }}
+      securityContext:
+        fsGroup: {{ .Values.securityContext.fsGroup }}
+        runAsUser: {{ .Values.securityContext.runAsUser }}
+      {{- end }}
       {{- if .Values.server.image.pullSecrets }}
       imagePullSecrets:
       {{- range .Values.server.image.pullSecrets }}
