--- a/bitnami/tensorflow-inception/values.yaml
+++ b/bitnami/tensorflow-inception/values.yaml
@@ -53,6 +53,14 @@ client:
 ##
 imagePullPolicy: IfNotPresent
 
+## Tensorflow Serving Pod Security Context
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
+##
+securityContext:
+  enabled: true
+  fsGroup: 1001
+  runAsUser: 1001
+
 ## Kubernetes configuration
 ## For minikube, set this to NodePort, elsewhere use LoadBalancer
 ##
