--- a/bitnami/tensorflow-inception/Chart.yaml
+++ b/bitnami/tensorflow-inception/Chart.yaml
@@ -1,5 +1,5 @@
 name: tensorflow-inception
-version: 3.2.1
+version: 3.2.2
 appVersion: 1.11.1
 description: Open-source software library for serving machine learning models
 keywords:
@@ -10,6 +10,7 @@ keywords:
 - learning
 - library
 home: https://tensorflow.github.io/serving/
+icon: https://bitnami.com/assets/stacks/tensorflow-inception/img/tensorflow-inception-stack-220x234.png
 sources:
 - https://github.com/bitnami/tensorflow-serving
 - https://github.com/bitnami/tensorflow-inception
