Fix external-dns maintainers name

--- a/bitnami/external-dns/Chart.yaml
+++ b/bitnami/external-dns/Chart.yaml
@@ -1,5 +1,5 @@
 name: external-dns
-version: 1.2.2
+version: 1.2.3
 appVersion: 0.5.9
 description: ExternalDNS is a Kubernetes addon that configures public DNS servers with information about exposed Kubernetes services to make them discoverable.
 keywords:
@@ -10,7 +10,7 @@ home: https://github.com/kubernetes-incubator/external-dns
 sources:
 - https://github.com/bitnami/bitnami-docker-external-dns
 maintainers:
-- name: bitnami
+- name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
 icon: https://bitnami.com/assets/stacks/external-dns/img/external-dns-stack-110x117.png
