[bitnami/zookeeper] Only specify JVMFLAGS env var if they are provided
Signed-off-by: tompizmor <tompizmor@gmail.com>

--- a/bitnami/zookeeper/templates/statefulset.yaml
+++ b/bitnami/zookeeper/templates/statefulset.yaml
@@ -119,8 +119,10 @@ spec:
         {{- else }}
           value: "no"
         {{- end }}
+        {{- if .Values.jvmFlags }}
         - name: JVMFLAGS
           value: {{ .Values.jvmFlags | quote }}
+        {{- end }}
         ports:
         - name: client
           containerPort: {{ .Values.service.port }}
