--- a/bitnami/zookeeper/values.yaml
+++ b/bitnami/zookeeper/values.yaml
@@ -93,7 +93,7 @@ heapSize: 1024
 
 ## Default JVMFLAGS for the ZooKeeper process
 ##
-# jvmFlags:
+jvmFlags: ""
 
 ## Configure ZooKeeper with a custom zoo.cfg file
 ##
