--- a/bitnami/cassandra/values.yaml
+++ b/bitnami/cassandra/values.yaml
@@ -86,6 +86,9 @@ resources: {}
   #   memory: 4Gi
   #   cpu: 2
 
+## ConfigMap with custom cassandra configuration files. This overrides any other Cassandra configuration set in the chart
+# existingConfiguration: 
+
 ## Cluster parameters
 ##
 cluster:
