--- a/bitnami/cassandra/templates/statefulset.yaml
+++ b/bitnami/cassandra/templates/statefulset.yaml
@@ -12,6 +12,7 @@ spec:
     matchLabels:
       app: {{ template "cassandra.name" . }}
       release: {{ .Release.Name }}
+      chart: {{ template "cassandra.chart" . }}
   serviceName: {{ template "cassandra.fullname" . }}-headless
   replicas: {{ .Values.cluster.replicaCount }}
   updateStrategy:
